# VMPlugins

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt
src/h264_voxel_reader/: CMakeLists.txt  h264.cc
src/lz4filereader/: CMakeLists.txt  fileheader.h  lz4filereader.cpp  lz4filereader.h
src/voxel_extractor/: CMakeLists.txt  voxel_extractor.cc  voxel_extractor.hpp
visualman/: library.cc  pagefileinterface.h  plugin.h
